--- a/scss/partials/core/_base.scss
+++ b/scss/partials/core/_base.scss
@@ -23,6 +23,13 @@ body {
   
 }
 
+hr {
+    margin-top: 0rem; 
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid rgba(0,0,0,.1);
+}
+
 a:hover {
   text-decoration: none;
 }
